syntax = "proto3";

option go_package = "./protoc";

// ========== Search Endpoint ==========

message SearchRequest {
    string category = 1;      
    double min_price = 2;    
    double max_price = 3;     
}

message Voucher {
    int32 id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    double price = 5;
    int32 quantity = 6;
    string valid_from = 7;   
    string valid_to = 8;     
    string created_at = 9;   
    string updated_at = 10;  
}

message SearchResponse {
    repeated Voucher vouchers = 1;
}

// ========== BuyVoucher Endpoint ==========

message BuyVoucherRequest {
    int32 user_id = 1;
    int32 voucher_id = 2;
}

message Transaction {
    int32 id = 1;
    int32 user_id = 2;
    int32 voucher_id = 3;       
    double amount = 4;
    string transaction_type = 5; 
    string payment_status = 6;    
    string payment_txn_id = 7;     
    string created_at = 8;        
    string updated_at = 9;        
}

message BuyVoucherResponse {
    Transaction transaction = 1;
    string message = 2;
}

// ========== GetBalance Endpoint ==========

message GetBalanceRequest {
    int32 user_id = 1;
}

message GetBalanceResponse {
    double balance = 1;
}

// ========== ListTransactions Endpoint ==========

message ListTransactionsRequest {
    int32 user_id = 1;
}

message ListTransactionsResponse {
    repeated Transaction transactions = 1;
}

// ========== Login Endpoint ==========

message LoginRequest {
    string email = 1;
    string password = 2;
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string created_at = 4;
    string updated_at = 5;
}

message LoginResponse {
    User user = 1;
    string message = 2;
}

// ========== Service Definition ==========

service VoucherService {
    // User login
    rpc Login(LoginRequest) returns (LoginResponse);

    // Search for available vouchers
    rpc Search(SearchRequest) returns (SearchResponse);

    // Purchase a voucher
    rpc BuyVoucher(BuyVoucherRequest) returns (BuyVoucherResponse);

    // Get wallet balance for a user
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);

    // List all transactions for a user
    rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}

